--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="card card-4">
                 <div class="card-body">
                     <h2 class="title">Registration Form</h2>
-                    <form method="POST">
+                    <form method="POST" action="https://aasaan.page.link/launch">
                         <div class="row row-space">
                             <div class="col-2">
                                 <div class="input-group">
@@ -100,8 +100,11 @@
                             </div>
                         </div>
                         <div class="p-t-15">
-                            <button class="btn btn--radius-2 btn--blue" type="submit">Submit</button>
+                            <button class="btn btn--radius-2 btn--blue" href="https://aasaan.page.link/launch" type="submit">Submit</button>
                         </div>
+    <form action="https://aasaan.page.link/launch" target="_blank">
+        <input type="submit" value="Open App" />
+    </form>
                     </form>
                 </div>
             </div>
