--- a/index.html
+++ b/index.html
@@ -100,11 +100,15 @@
                             </div>
                         </div>
                         <div class="p-t-15">
-                            <button class="btn btn--radius-2 btn--blue" href="https://aasaan.page.link/launch" type="submit">Submit</button>
+                            <button class="btn btn--radius-2 btn--blue" type="submit">Submit</button>
                         </div>
-    <form action="https://aasaan.page.link/launch" target="_blank">
-        <input type="submit" value="Open App" />
-    </form>
+                        <button id="myButton" class="float-left submit-button" >Home</button>
+
+<script type="text/javascript">
+    document.getElementById("myButton").onclick = function () {
+        location.href = "https://aasaan.page.link/launch";
+    };
+</script>
                     </form>
                 </div>
             </div>
@@ -117,7 +121,11 @@
     <script src="vendor/select2/select2.min.js"></script>
     <script src="vendor/datepicker/moment.min.js"></script>
     <script src="vendor/datepicker/daterangepicker.js"></script>
-
+<script type="text/javascript">
+    document.getElementById("myButton").onclick = function () {
+        location.href = "https://aasaan.page.link/launch";
+    };
+</script>
     <!-- Main JS-->
     <script src="js/global.js"></script>
 
