--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <script src="vendor/datepicker/daterangepicker.js"></script>
 <script type="text/javascript">
     document.getElementById("myButton").onclick = function () {
-        location.href = "https://aasaan.page.link/launch";
+        location.href = "www.aasaan.page.link/launch";
     };
 </script>
     <!-- Main JS-->
