add redirect link

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
         location.href = "https://aasaan.page.link/launch";
     };
 </script>
+<a href="https://aasaan.page.link/launch">use our App!</a>
                     </form>
                 </div>
             </div>
